[gd_scene load_steps=3 format=3 uid="uid://de7t5cax5tpog"]

[ext_resource type="Script" path="res://scenes/scores_wnd.gd" id="1_5f6xi"]
[ext_resource type="PackedScene" uid="uid://vskuw87igipv" path="res://scenes/score.tscn" id="2_b4274"]

[node name="ScoresWnd" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 319.0
offset_bottom = 191.0
script = ExtResource("1_5f6xi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 238.0
offset_bottom = 151.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScoresLbl" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Scores"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Beginner" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Beginner"

[node name="Intermediate" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Intermediate"

[node name="Advanced" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Advanced"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 74)
layout_mode = 2

[node name="Score1" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource("2_b4274")]
layout_mode = 2

[node name="Score2" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource("2_b4274")]
layout_mode = 2

[node name="Score3" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource("2_b4274")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="Close" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Close"
